--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,6 +1,6 @@
 .back-menu {
   position: fixed;
-  background-color: #7a3145;
+
   top: 0;
   width: 100%;
   height: 100%;
@@ -16,7 +16,8 @@
   display: flex;
   flex-direction: column;
   position: absolute;
-  width: 320px;
+  background-color: #7a3145;
+  width: 375px;
   height: 100%;
   padding: 28px 28px 40px 28px;
   margin: 0;
@@ -95,6 +96,11 @@
   color: #7a3145;
 }
 
+/* .two:hover .menu-nav-page {
+  background-color: #7a3145;
+  color: #fbfbfb;
+} */
+
 .menu-button {
   background-color: #fbfbfb;
   border: none;
@@ -108,4 +114,10 @@
   letter-spacing: -0.01em;
   text-transform: uppercase;
   color: #7a3145;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.menu-button:hover,
+.menu-button:focus {
+  color: rgba(122, 49, 69, 0.7);
 }
