update mobile-menu css

--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -86,26 +86,14 @@
   color: #7a3145;
 }
 
-.menu-nav-item:hover,
-.menu-nav-item:focus {
-  background-color: #fbfbfb;
-}
-
-.menu-nav-item:hover .menu-nav-link,
-.menu-nav-item:focus .menu-nav-link {
-  color: #7a3145;
-}
-
-/* .two:hover .menu-nav-page {
-  background-color: #7a3145;
-  color: #fbfbfb;
-} */
-
 .menu-button {
+  display: flex;
   background-color: #fbfbfb;
   border: none;
+  justify-content: center;
+  align-items: center;
   border-radius: 30px;
-  padding: 16px 39px;
+  padding: 16px 0;
   width: 155px;
   margin: 0 auto;
   font-weight: 600;
