--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,9 +1,9 @@
 .back-menu {
   position: fixed;
-
+  background: rgba(20, 20, 20, 0.4);
   top: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -19,7 +19,6 @@
   background-color: #7a3145;
   width: 375px;
   height: 100%;
-  padding: 28px 28px 40px 28px;
   margin: 0;
   justify-content: space-between;
 }
@@ -32,43 +31,44 @@
 
 .menu-close {
   position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 28px;
-  right: 28px;
+  top: 20px;
+  right: 20px;
   border: none;
-  background-color: transparent;
-  width: 24px;
-  height: 24px;
   padding: 0;
+  background-color: transparent;
+  width: 32px;
+  height: 32px;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .menu-close-icon {
+  stroke: #fbfbfb;
 }
 
 .menu-nav {
-  margin: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 240px auto 0;
 }
+
 .menu-nav-item {
+  display: flex;
+  justify-content: center;
+  padding: 12px 0;
   margin-bottom: 8px;
   border: 1px solid rgba(251, 251, 251, 0.4);
   border-radius: 12px;
-  padding: 12px 16px;
   width: 115px;
   background-color: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   cursor: pointer;
 }
 
-.two {
-  padding: 12px 24px;
-}
-
 .tree {
-  padding: 12px 32px;
+  width: 114px;
+  margin-bottom: 0;
 }
 
 .menu-nav-link {
@@ -95,7 +95,7 @@
   border-radius: 30px;
   padding: 16px 0;
   width: 155px;
-  margin: 0 auto;
+  margin: 0 auto 40px;
   font-weight: 600;
   font-size: 14px;
   line-height: 1.29;
@@ -108,4 +108,41 @@
 .menu-button:hover,
 .menu-button:focus {
   color: rgba(122, 49, 69, 0.7);
+}
+
+@media screen and (min-width: 768px) {
+  .modal-menu {
+    width: 351px;
+    top: 0;
+    right: 0;
+  }
+  .menu-close {
+    top: 32px;
+    right: 32px;
+    width: 40px;
+    height: 40px;
+  }
+  .menu-nav {
+    margin: 360px auto 0;
+  }
+  .menu-nav-page {
+    width: 114px;
+  }
+  .two {
+    width: 119px;
+  }
+
+  .tree {
+    width: 123px;
+  }
+  .menu-nav-link {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+  .menu-button {
+    width: 157px;
+    font-size: 18px;
+    line-height: 1.11;
+    letter-spacing: -0.01em;
+  }
 }
