off  mobile-menu

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,4 @@
-<div class="back-menu is-open">
+<div class="back-menu">
   <div class="modal-menu">
     <button class="menu-close modal-close" type="button">X
       <svg class="menu-close-icon close-icon" width="16" height="16">
