--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -18,7 +18,7 @@
   position: absolute;
   background-color: #7a3145;
   width: 375px;
-  height: 100%;
+  height: 100vh;
   margin: 0;
   justify-content: space-between;
 }
@@ -144,5 +144,11 @@
     font-size: 18px;
     line-height: 1.11;
     letter-spacing: -0.01em;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .back-menu {
+    display: none;
   }
 }
