--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,4 @@
-<div class="back-menu is-open">
+<div class="back-menu">
   <div class="modal-menu">
     <button class="menu-close" type="button">
       <svg class="menu-close-icon" width="32" height="32">
