--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -6,8 +6,10 @@
       </svg>
     </button>
     <ul class="menu-nav">
-      <li class="menu-nav-item  menu-nav-page">
-        <a class="menu-nav-link menu-nav-page" href="./how-it-works.html">How It Works</a>
+      <li class="menu-nav-item menu-nav-page">
+        <a class="menu-nav-link menu-nav-page" href="./how-it-works.html"
+          >How It Works</a
+        >
       </li>
       <li class="menu-nav-item two">
         <a class="menu-nav-link" href="./vegetables.html">Vegetables</a>
@@ -17,6 +19,5 @@
       </li>
     </ul>
     <button type="button" class="menu-button">Shop now</button>
-    </div>
   </div>
 </div>
