--- a/src/partials/rewiews.html
+++ b/src/partials/rewiews.html
@@ -1,4 +1,4 @@
-<section class="reviews section">
+<section class="reviews section" id="reviews-section">
   <div class="container">
     <h2 class="reviews-title">
       reviews from our
@@ -13,10 +13,10 @@
         <img
           class="reviews-image"
           srcset="
-            ../img/reviews-john-wax-img@2x.png 2x,
-            ../img/reviews-john-wax-img.png    1x
+            ./img/reviews-john-wax-img@2x.png 2x,
+            ./img/reviews-john-wax-img.png    1x
           "
-          src="../img/reviews-john-wax-img.png"
+          src="./img/reviews-john-wax-img.png"
           alt="old man"
           width="56"
           height="56"
@@ -32,10 +32,10 @@
         <img
           class="reviews-image"
           srcset="
-            ../img/reviews-victoria-romashenko-img@2x.png 2x,
-            ../img/reviews-victoria-romashenko-img.png    1x
+            ./img/reviews-victoria-romashenko-img@2x.png 2x,
+            ./img/reviews-victoria-romashenko-img.png    1x
           "
-          src="../img/reviews-victoria-romashenko-img.png"
+          src="./img/reviews-victoria-romashenko-img.png"
           alt="young woman"
           width="56"
           height="56"
@@ -51,10 +51,10 @@
         <img
           class="reviews-image"
           srcset="
-            ../img/reviews-ihor-trachuck-img@2x.png 2x,
-            ../img/reviews-ihor-trachuck-img.png    1x
+            ./img/reviews-ihor-trachuck-img@2x.png 2x,
+            ./img/reviews-ihor-trachuck-img.png    1x
           "
-          src="../img/reviews-ihor-trachuck-img.png"
+          src="./img/reviews-ihor-trachuck-img.png"
           alt="young man"
           width="56"
           height="56"
