--- a/src/partials/vegetables.html
+++ b/src/partials/vegetables.html
@@ -1,6 +1,6 @@
 <!------------ VEGETABLES ---------->
 
-<section class="vegetables section">
+<section class="vegetables section" id="vegetables-section">
   <div class="container">
     <h2 class="vegetables-title">
       organic <span class="vegetables-title-word">vegetables</span>
