--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -18,6 +18,6 @@
         <a class="menu-nav-link" href="./rewiews.html">Reviews</a>
       </li>
     </ul>
-    <button type="button" class="menu-button">Shop now</button>
+    <but ton type="button" class="menu-button">Shop now</but>
   </div>
 </div>
