--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -11,11 +11,11 @@
           >How It Works</a
         >
       </li>
-      <li class="menu-nav-item two">
+      <li class="menu-nav-item">
         <a class="menu-nav-link" href="./vegetables.html">Vegetables</a>
       </li>
       <li class="menu-nav-item tree">
-        <a class="menu-nav-link" href="./rewiews.html">Reviews</a>
+        <a class="menu-nav-link" href="#reviews-section">Reviews</a>
       </li>
     </ul>
     <but ton type="button" class="menu-button">Shop now</but>
