--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -3,7 +3,7 @@
         <h2 class="subtitle">Fresh <span class="decorated-red-txt">Harvest</span> Box has got you covered</h2>
         <p class="text">Our boxes are packed with delicious, nutritious vegetables, perfect for anyone looking to eat healthier or support local farmers. Order your box today and start enjoying the best that nature has to offer!</p>
 
-        
+
         <div class="content-wrap">
             <div class="order-wrap">
                 <p class="order-txt">Ordering <span class="red-txt">from us</span> is quick and easy! Fill out <span class="green-txt">the form</span> below and we will contact you !</p>
@@ -44,13 +44,13 @@
                     <p class="font"></p>
                 </div>
                 <p class="social-txt">Follow us on our social networks:</p>
-                <li class="social-list">
-                    <ul class="social-link"><a href="https://www.instagram.com/goitclub/">instagram</a></ul>
-                    <p class="slash">/</p>
-                    <ul class="social-link"><a href="https://www.facebook.com/goITclub/">facebook</a></ul>
-                    <p class="slash">/</p>
-                    <ul class="social-link"><a href="https://www.youtube.com/c/GoIT">youtube</a></ul>
-                </li>
+                <ul class="social-list">
+                    <li class="social-link"><a href="https://www.instagram.com/goitclub/">instagram</a></li>
+                    <div class="slash">/</div>
+                    <li class="social-link"><a href="https://www.facebook.com/goITclub/">facebook</a></li>
+                    <div class="slash">/</div>
+                    <li class="social-link"><a href="https://www.youtube.com/c/GoIT">youtube</a></li>
+                </ul>
             </div>
         </div>
 
