update your order

--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,4 +1,4 @@
-.your-order {
+/* .your-order {
     background-color: #7a3145;
     padding: 80px 0;
 }
@@ -335,4 +335,4 @@
     .social-list {
         max-width: 357px;
     }
-}
+} */
