--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -1,4 +1,4 @@
-<section class="your-order">
+<!-- <section class="your-order">
     <div class="container">
         <h2 class="subtitle">Fresh <span class="decorated-red-txt">Harvest</span> Box has got you covered</h2>
         <p class="text">Our boxes are packed with delicious, nutritious vegetables, perfect for anyone looking to eat healthier or support local farmers. Order your box today and start enjoying the best that nature has to offer!</p>
@@ -52,4 +52,4 @@
         </div>
 
     </div>
-</section>        
+</section>         -->
