--- a/src/partials/your-order.html
+++ b/src/partials/your-order.html
@@ -16,7 +16,7 @@
                     </div>
         
                     <div class="order-label-wrap">
-                        <label for="user-email" class="order-label">
+                        <label class="order-label">
                             <input class="order-input" type="email" name="user-email" placeholder="Email" pattern="([A-z0-9_.-]{1,})@([A-z0-9_.-]{1,}).([A-z]{2,8})" required />
                         </label>
                     </div>
@@ -46,9 +46,9 @@
                 <p class="social-txt">Follow us on our social networks:</p>
                 <ul class="social-list">
                     <li class="social-link"><a href="https://www.instagram.com/goitclub/">instagram</a></li>
-                    <div class="slash">/</div>
+                    <li class="slash"><span>/</span></li>
                     <li class="social-link"><a href="https://www.facebook.com/goITclub/">facebook</a></li>
-                    <div class="slash">/</div>
+                    <li class="slash"><span>/</span></li>
                     <li class="social-link"><a href="https://www.youtube.com/c/GoIT">youtube</a></li>
                 </ul>
             </div>
