--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,100 +1,95 @@
-
 /* HERO */
 
-.hero{
-    background-color: #576f35;
-    margin-right: auto;
-    margin-left: auto;
+.hero {
+  background-color: #576f35;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .hero-text-wrap {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding-top: 100px;
-    padding-bottom: 40px;
-    padding-right: 20px;
-    margin-left: 20px;
- 
-   
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 100px;
+  padding-bottom: 40px;
+  padding-right: 20px;
+  margin-left: 20px;
 }
 
 @media (min-width: 768px) {
-    .hero-text-wrap {
-            padding-top: 122px;
-            padding-bottom: 50px;
-            padding-right: 32px;
-            margin-left: 32px;
-            align-items: flex-start;
-}
+  .hero-text-wrap {
+    padding-top: 122px;
+    padding-bottom: 50px;
+    padding-right: 32px;
+    margin-left: 32px;
+    align-items: flex-start;
+  }
 }
 
 .hero-title {
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 600;
-    font-size: 48px;
-    line-height: 1;
-    letter-spacing: -0.01em;
-    text-transform: uppercase;
-    color: #fbfbfb;
-    max-width: 355px;
-    margin-bottom: 20px;
-    
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: 600;
+  font-size: 48px;
+  line-height: 1;
+  letter-spacing: -0.01em;
+  text-transform: uppercase;
+  color: #fbfbfb;
+  max-width: 355px;
+  margin-bottom: 20px;
 }
 
 @media (min-width: 768px) {
-    .hero-title {
-        font-size: 76px;
-        max-width: 704px;
-        margin-bottom: 25px;
-    }
+  .hero-title {
+    font-size: 76px;
+    max-width: 704px;
+    margin-bottom: 25px;
+  }
 }
 
 .hero-text {
-    font-family: "Inter Tight", sans-serif;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.25;
-    color: #fbfbfb;
-    max-width: 355px;
-    margin-top: 0;
-    margin-bottom: 0;
+  font-family: 'Inter Tight', sans-serif;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.25;
+  color: #fbfbfb;
+  max-width: 355px;
+  margin-top: 0;
+  margin-bottom: 0;
 }
 
 @media (min-width: 768px) {
-    .hero-text {
-        font-size: 16px;
-        max-width: 603px;
-    }
-} 
+  .hero-text {
+    font-size: 16px;
+    max-width: 603px;
+  }
+}
 
 .hero-imeage {
-    background-image: url('.src/img/hero-mob-img.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-    min-height: 370px;
-    margin-right: auto;
-    margin-left: auto;
-    
+  background-image: url('.src/img/hero-mob-img.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+  min-height: 370px;
+  margin-right: auto;
+  margin-left: auto;
 }
 @media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
-screen and (min-resolution: 192dpi) and (max-width: 767px),
-screen and (min-resolution: 2dppx) and (max-width: 767px) {
-    .hero-imeage {
-        background-image: url('.src/img/hero-mob-img@2x.jpg');
-    }
+  screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero-imeage {
+    background-image: url('.src/img/hero-mob-img@2x.jpg');
+  }
 }
 
 @media screen and (min-width: 768px) {
-    .hero-imeage {
-        background-image: url('.src/img/hero-tab-img.jpg');
-    }
+  .hero-imeage {
+    background-image: url('.src/img/hero-tab-img.jpg');
+  }
 }
 
 @media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
-screen and (min-resolution: 192dpi) and (min-width: 768px),
-screen and (min-resolution: 2dppx) and (min-width: 768px) {
-    .hero-imeage {
-        background-image: url('.src/img/hero-tab-img@2x.jpg');
-    }
+  screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero-imeage {
+    background-image: url('.src/img/hero-tab-img@2x.jpg');
+  }
 }
