--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,4 +1,4 @@
-<div class="back-menu is-open">
+<div class="back-menu">
   <div class="modal-menu">
     <button class="menu-close" type="button">
       <svg class="menu-close-icon" width="32" height="32">
@@ -18,6 +18,6 @@
         <a class="menu-nav-link" href="#reviews-section">Reviews</a>
       </li>
     </ul>
-    <but ton type="button" class="menu-button">Shop now</but>
+    <button type="button" class="menu-button">Shop now</button>
   </div>
 </div>
