--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -201,7 +201,7 @@
     object-fit: cover;
     height: 100%;
     width: 100%;
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: transform 1s cubic-bezier(.49,.25,.39,.98);
 }
 
 .font {
@@ -210,7 +210,7 @@
     background-color: rgba(20, 20, 20, 0.3);
     height: 100%;
     width: 100%;
-    transition: background-color 250ms  cubic-bezier(0.215, 0.610, 0.355, 1);
+    transition: background-color 1s cubic-bezier(.49,.25,.39,.98);
 
 }
 
@@ -358,7 +358,7 @@
     }
     
     .your-order {
-        padding: 100px 80px;
+        padding: 100px 0px;
     }
 
     .subtitle {
