--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -339,16 +339,14 @@
 
   .order-wrap {
     padding: 50px;
-    max-width: 529px;
     margin-bottom: 0;
   }
 
   .social-media {
-    min-width: 527px;
+    height: 534px;
   }
 
   .back-img {
-    max-width: 427px;
     height: 273px;
   }
   .social-list {
