--- a/src/css/how-it-works.css
+++ b/src/css/how-it-works.css
@@ -7,6 +7,21 @@
 	padding-bottom: 40px;
 }
 
+.how-img-wrap {
+	position: relative;
+}
+
+.how-img-wrap::after {
+	content: "";
+	border-radius: 30px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: linear-gradient(rgba(20, 20, 20, 0.3), rgba(20, 20, 20, 0.3));
+}
+
 .how-img {
 	margin: 0 auto;
 	border-radius: 30px;
@@ -137,7 +152,6 @@
 		font-size: 16px;
 		line-height: 1.25;
 	}
-
 }
 
 @media screen and (min-width: 1280px) {
@@ -152,6 +166,11 @@
 		padding-left: 100px;
 		display: flex;
 		justify-content: end;
+	}
+
+	.how-img-wrap {
+		max-width: 420px;
+		margin-left: auto;
 	}
 
 	.how-bottom-wrap {
