--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,15 +1,17 @@
 <section class="how-it-works">
 		<div class="how-top-wrap">
 			<div class="container how-container">
-				<picture class="how-img">
-					<source media="(min-width: 1280px)" 
-						srcset="./img/how-it-works-desk-img@2x.jpg 2x, ./img/how-it-works-desk-img.jpg 1x ">
-					<source media="(min-width: 768px)" 
-						srcset="./img/how-it-works-tab-img@2x.jpg, ./img/how-it-works-tab-img.jpg 1x">
-					<source media="(min-width: 375px)" 
-						srcset="./img/how-it-works-mob-img@2x.jpg 2x, ./img/how-it-works-mob-img.jpg 1x">
-					<img class="how-img" src="./img/how-it-works-tab-img.jpg" alt="Woman inthe kitchen">
-				</picture>
+				<div class="how-img-wrap">
+					<picture class="how-img">
+						<source media="(min-width: 1280px)" 
+							srcset="./img/how-it-works-desk-img@2x.jpg 2x, ./img/how-it-works-desk-img.jpg 1x ">
+						<source media="(min-width: 768px)" 
+							srcset="./img/how-it-works-tab-img@2x.jpg 2x, ./img/how-it-works-tab-img.jpg 1x">
+						<source media="(min-width: 375px)" 
+							srcset="./img/how-it-works-mob-img@2x.jpg 2x, ./img/how-it-works-mob-img.jpg 1x">
+						<img class="how-img" src="./img/how-it-works-tab-img.jpg" alt="Woman inthe kitchen">
+					</picture>
+				</div>
 			</div>
 		</div>
 		<div class="how-bottom-wrap">
