fix img + desktop

--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -7,6 +7,13 @@
     margin-left: auto;
 }
 
+
+@media (min-width: 1280px) {
+.hero-container {
+    display: flex;
+}
+}
+
 .hero-text-wrap {
     display: flex;
     flex-direction: column;
@@ -14,7 +21,8 @@
     padding-top: 100px;
     padding-bottom: 40px;
     padding-right: 20px;
-    margin-left: 20px;
+    padding-left: 20px;
+    
  
    
 }
@@ -24,9 +32,22 @@
             padding-top: 122px;
             padding-bottom: 50px;
             padding-right: 32px;
-            margin-left: 32px;
+            padding-left: 32px;
             align-items: flex-start;
+            gap: 25px;
 }
+}
+
+@media (min-width: 1280px) {
+    .hero-text-wrap {
+        padding-top: 238px;
+        padding-left: 100px;
+        padding-right: 28px;
+        align-items: center;
+        align-items: flex-start;
+        gap: 128px;
+
+    }
 }
 
 .hero-title {
@@ -46,7 +67,14 @@
     .hero-title {
         font-size: 76px;
         max-width: 704px;
-        margin-bottom: 25px;
+        margin-bottom: 0;
+    }
+}
+
+@media (min-width: 1280px) {
+    .hero-title {
+        font-size: 76px;
+        max-width: 502px;
     }
 }
 
@@ -68,11 +96,19 @@
     }
 } 
 
+@media (min-width: 1280px) {
+    .hero-text {
+        font-size: 16px;
+        max-width: 472px;
+    }
+}
+
 .hero-imeage {
-    background-image: url('.src/img/hero-mob-img.jpg');
+    background-image: url('../img/hero-mob-img.jpg');
     background-repeat: no-repeat;
     background-size: cover;
     min-height: 370px;
+    min-width: 300px;
     margin-right: auto;
     margin-left: auto;
     
@@ -81,13 +117,13 @@
 screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
     .hero-imeage {
-        background-image: url('.src/img/hero-mob-img@2x.jpg');
+        background-image: url('../img/hero-mob-img@2x.jpg');
     }
 }
 
 @media screen and (min-width: 768px) {
     .hero-imeage {
-        background-image: url('.src/img/hero-tab-img.jpg');
+        background-image: url('../img/hero-tab-img.jpg');
     }
 }
 
@@ -95,6 +131,22 @@ screen and (min-resolution: 2dppx) and (max-width: 767px) {
 screen and (min-resolution: 192dpi) and (min-width: 768px),
 screen and (min-resolution: 2dppx) and (min-width: 768px) {
     .hero-imeage {
-        background-image: url('.src/img/hero-tab-img@2x.jpg');
+        background-image: url('../img/hero-tab-img@2x.jpg');
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .hero-imeage {
+        background-image: url('../img/hero-desk-img.jpg');
+        min-width: 650px;
+        min-height: none;
+    }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1280px),
+screen and (min-resolution: 192dpi) and (min-width: 1280px),
+screen and (min-resolution: 2dppx) and (min-width: 1280px) {
+    .hero-imeage {
+        background-image: url('../img/hero-desk-img@2x.jpg');
     }
 }
