--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -2,8 +2,11 @@
         <div class="container hero-container">
             <div class="hero-text-wrap">
                 <h1 class="hero-title">organic vegetables to your diet today!</h1>
-                <p class="hero-text">Our expertly curated vegetable baskets are made with the freshest, highest quality vegetables available. Fresh Harvest
-                Box has got you covered. Fresh, high-quality vegetables in expertly curated vegetable baskets delivered to you.</p>
+                <p class="hero-text">Our expertly curated vegetable baskets are made with the freshest, highest quality
+                    vegetables available. Fresh Harvest
+                    Box has got you covered. Fresh, high-quality vegetables in expertly curated vegetable baskets
+                    delivered to you.</p>
+                
             </div>
             <div class="hero-imeage">
             </div>
