--- a/src/partials/how-it-works.html
+++ b/src/partials/how-it-works.html
@@ -1,4 +1,4 @@
-<section class="how-it-works">
+<section class="how-it-works" id="how-it-works-section">
   <div class="how-top-wrap">
     <div class="how-img-wrap">
       <picture class="how-img">
