--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,54 +1,64 @@
 <!-- footer -->
 <footer class="footer">
-    <div class="container footer-container">
-        <div class="footer-wrap"> 
-    <div class="footer-logo-wrap">
-        <ul class="footer-logo"> 
-         <li class="footer-logo-item">
-        <div class="footer-icons-wrap"> 
-            <a class="footer-logo-links" href="./index.html">
-            <svg class="footer-logo-cub" width="16" height="16">
-                <use href="./images/icons.svg#icon-Logo-vector"></use>
-            </svg>
-            </a>
-        </div>
-         </li>
-        </ul>
-        <ul class="footer-logo"> 
-        <li class="footer-logo-item">
-            <div class="footer-icons-wrap"> 
-                <a class="footer-logo-links" href="./index.html">
-                <svg class="footer-logo-text" width="146" height="16">
-                    <use href="./images/icons.svg#icon-GreenHarvest"></use>
+  <div class="container footer-container">
+    <div class="footer-wrap">
+      <div class="footer-logo-wrap">
+        <ul class="footer-logo">
+          <li class="footer-logo-item">
+            <div class="footer-icons-wrap">
+              <a class="footer-logo-links" href="./index.html">
+                <svg class="footer-links-icons logo-cub" width="16" height="16">
+                  <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
                 </svg>
-                </a>
+              </a>
             </div>
-             </li>
-            </ul>
-        </div>
-        <p class="footer-text">Whether you're looking for a healthy snack or a thoughtful gift, our fruit baskets are the perfect choice.</p>
-    </div>
-        <div class="footer-menu-section">
-             <ul class="footer-menu-list"> 
-                <li><a class="footer-menu-link" href="#how-it-works-section">how it works</a></li>
-                <li><a class="footer-menu-link" href="#vegetables-section">vegetables</a></li>
-                <li><a class="footer-menu-link" href="#reviews-section">reviews</a></li>
-              </ul>
-                    <ul class="footer-contacts-list">
-                        <li class="footer-contacts-item"> +380 (68) 443-94-26</li>
-                        <li class="footer-contacts-item"> 1678 S. Pioneer Road Salt Lake City UT 84104</li>
-                    </ul>
+          </li>
+        </ul>
+        <ul class="footer-logo">
+          <li class="footer-logo-item">
+            <div class="footer-icons-wrap">
+              <a class="footer-logo-links" href="./index.html">
+                <svg
+                  class="footer-links-icons logo-text"
+                  width="146"
+                  height="16"
+                >
+                  <use href="/img/symbol-defs.svg#icon-greenharvest"></use>
+                </svg>
+              </a>
             </div>
-<div class="footer-privacy"> 
-<ul class="footer-privacy-block">
-    <li class="footer-privacy-item"> Privacy Policy / Cookie settings</li>
-    <li class="footer-privacy-item"> ©Green Harvest 2023 </li>
-</ul> 
-        </div>
+          </li>
+        </ul>
+      </div>
+      <p class="footer-text">
+        Whether you're looking for a healthy snack or a thoughtful gift, our
+        fruit baskets are the perfect choice.
+      </p>
     </div>
-                
-    
-
-   
-</footer> 
-
+    <div class="footer-menu-section">
+      <ul class="footer-menu-list">
+        <li>
+          <a class="footer-menu-link" href="#how-it-works-section"
+            >how it works</a
+          >
+        </li>
+        <li>
+          <a class="footer-menu-link" href="#vegetables-section">vegetables</a>
+        </li>
+        <li><a class="footer-menu-link" href="#reviews-section">reviews</a></li>
+      </ul>
+      <ul class="footer-contacts-list">
+        <li class="footer-contacts-item">+380 (68) 443-94-26</li>
+        <li class="footer-contacts-item">
+          1678 S. Pioneer Road Salt Lake City UT 84104
+        </li>
+      </ul>
+    </div>
+    <div class="footer-privacy">
+      <ul class="footer-privacy-block">
+        <li class="footer-privacy-item">Privacy Policy / Cookie settings</li>
+        <li class="footer-privacy-item">©Green Harvest 2023</li>
+      </ul>
+    </div>
+  </div>
+</footer>
