--- a/src/css/mobile-menu.css
+++ b/src/css/mobile-menu.css
@@ -1,10 +1,11 @@
 /* =================MENU==================== */
 .back-menu {
   position: fixed;
-  background: rgba(20, 20, 20, 0.4);
+  /* background: rgba(20, 20, 20, 0.4); */
+  background-color: #7a3145;
   top: 0;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -19,7 +20,7 @@
   position: absolute;
   background-color: #7a3145;
   width: 375px;
-  height: 100vh;
+  height: 100%;
   margin: 0;
   justify-content: space-between;
 }
@@ -117,6 +118,10 @@
 }
 
 @media screen and (min-width: 768px) {
+  .back-menu {
+    background: rgba(20, 20, 20, 0.4);
+  }
+
   .modal-menu {
     width: 351px;
     top: 0;
