--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -7,12 +7,12 @@
     </button>
     <ul class="menu-nav">
       <li class="menu-nav-item menu-nav-page">
-        <a class="menu-nav-link menu-nav-page" href="./how-it-works.html"
+        <a class="menu-nav-link menu-nav-page" href="#how-it-works-section"
           >How It Works</a
         >
       </li>
       <li class="menu-nav-item">
-        <a class="menu-nav-link" href="./vegetables.html">Vegetables</a>
+        <a class="menu-nav-link" href="#vegetables-section">Vegetables</a>
       </li>
       <li class="menu-nav-item tree">
         <a class="menu-nav-link" href="#reviews-section">Reviews</a>
