--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -6,6 +6,12 @@
   margin-left: auto;
 }
 
+@media (min-width: 1280) {
+.hero {
+  display: flex;
+}
+  
+}
 @media (min-width: 1280px) {
   .hero-container {
     display: flex;
@@ -140,7 +146,8 @@
 
 @media screen and (min-width: 1280px) {
   .hero-imeage {
-    background-image: url('/img/hero-desk-img.jpg');
+    background-image: linear-gradient(rgba(20, 20, 20, 0.2),
+        rgba(20, 20, 20, 0.2)), url('/img/hero-desk-img.jpg');
     min-width: 650px;
     min-height: none;
   }
@@ -150,6 +157,7 @@
   screen and (min-resolution: 192dpi) and (min-width: 1280px),
   screen and (min-resolution: 2dppx) and (min-width: 1280px) {
   .hero-imeage {
-    background-image: url('/img/hero-desk-img@2x.jpg');
+    background-image: linear-gradient(rgba(20, 20, 20, 0.2),
+        rgba(20, 20, 20, 0.2)), url('/img/hero-desk-img@2x.jpg');
   }
 }
