--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,7 +1,7 @@
   <!-- footer -->
   <footer class="footer">
     <div class="container footer-container">
-        <div class="footer-wrap"> 
+        <!-- <div class="footer-wrap"> 
     <div class="footer-logo-wrap">
         <ul class="footer-logo"> 
          <li class="footer-logo-item">
@@ -13,13 +13,17 @@
             </a>
         </div>
          </li>
-        </ul>
+        </ul> -->
+        
         <ul class="footer-logo"> 
-        <li class="footer-logo-item">
+            <li class="footer-logo-item">
             <div class="footer-icons-wrap"> 
                 <a class="footer-logo-links" href=" ">
-                <svg class="footer-links-icons" width="146" height="16">
-                    <use href="./images/icons.svg#icon-GreenHarvest"></use>
+                <svg class="footer-links-icons" width="16" height="16">
+                    <use href="/img/symbol-defs.svg#logo-mob-icon"></use>
+                </svg>
+                <svg class="footer-links-icons" width="148" height="12">
+                    <use href="/img/symbol-defs.svg#icon-green-harvest"></use>
                 </svg>
                 </a>
             </div>
@@ -34,10 +38,13 @@
                 <li><a class="footer-menu-link" href="">vegetables</a></li>
                 <li><a class="footer-menu-link" href="">reviews</a></li>
               </ul>
-                    <ul class="footer-contacts-list">
-                        <li class="footer-contacts-item"> +380 (68) 443-94-26</li>
-                        <li class="footer-contacts-item"> 1678 S. Pioneer Road Salt Lake City UT 84104</li>
-                    </ul>
+
+              <address class="footer-contacts-list">
+                <a class="footer-contacts-item" href="tel:+380684439426">+380 (68) 443-94-26</a>
+                1678 S. Pioneer Road Salt<br /> Lake City UT 84104
+              </address>
+             
+                    
             </div>
 <div class="footer-privacy"> 
 <ul class="footer-privacy-block">
