--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,18 +1,20 @@
 <header class="header">
     <div class="logo-text-button container">
+        <div class="logo-wrap">
         <a href="/src/index.html" class="logo">
             <svg width="16" height="16" class="logo-icon">
                 <use href="/img/symbol-defs.svg#icon-logo-vector"></use>
             </svg>
         </a>
         <a href="/src/index.html" class="logo">
-            <svg width="16" height="16" class="logo-icon">
+            <svg width="146" height="16" class="logo-icon">
                 <use href="/img/symbol-defs.svg#icon-greenharvest"></use>
             </svg>
         </a>
+        </div>
         <button type="button" class="open-menu-btn">
-            <svg width="32" height="32">
-                <use href="/src/img/symbol-defs.svg#mob-menu-mobile-icon"></use>
+            <svg width="21" height="16">
+                <use href="/img/symbol-defs.svg#mob-menu-mobile-icon"></use>
             </svg>
         </button>
     </div>
