--- a/src/css/header.css
+++ b/src/css/header.css
@@ -20,7 +20,40 @@
     padding-top: 20px;
     padding-right: 20px; */
 }
-
+.open-menu-btn {
+    position: fixed;
+    width: 32px;
+        height: 32px;
+        position: relative;
+        border: none;
+        cursor: pointer;
+        background-color: transparent;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.25), 0 4px 4px 0 rgba(0, 0, 0, 0.25);
+}
 .navig {
     display: none;
+}
+
+/* TABLET */
+
+@media screen (min-width: 768px) {
+    .logo-text-button {
+            display: flex;
+            align-items: center;
+            max-width: 704px;
+            height: 56px;
+            justify-content: space-between;
+        }
+}
+
+/* DESKTOP */
+
+@media screen and (min-width: 1280px) {
+    .navig {
+        display: flex;
+    }
+    .open-menu-btn {
+        display: none;
+    }
+
 }
