--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -20,8 +20,6 @@
   margin-bottom: 40px;
 }
 
-/* !======================= */
-
 .content-wrap {
   display: flex;
   flex-direction: column;
@@ -34,8 +32,6 @@
   background: #fbfbfb;
   margin-bottom: 20px;
 }
-
-/* !======================= */
 
 .order-txt {
   font-weight: 600;
@@ -264,12 +260,12 @@
 
   .order-wrap {
     padding: 50px 100px;
-    max-width: 628px;
     margin-bottom: 25px;
   }
 
   .order-txt {
     margin-bottom: 50px;
+    max-width: 428px;
   }
 
   .order-input {
@@ -298,7 +294,6 @@
 
   .social-media {
     padding: 50px;
-    min-width: 628px;
   }
 
   .back-img {
@@ -310,6 +305,11 @@
     font-size: 18px;
     line-height: 1.11111;
     margin-bottom: 15px;
+  }
+
+  .social-link {
+    font-size: 32px;
+    line-height: 1;
   }
 }
 
@@ -342,16 +342,13 @@
     margin-bottom: 0;
   }
 
-  .social-media {
-    /* height: 534px; */
-  }
-
   .back-img {
     height: 273px;
   }
   .social-list {
     max-width: 357px;
   }
+
 
   .slash {
     font-size: 32px;
